--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "jotai": "^2.7.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "xlsx": "file:vendor/xlsx-0.20.1.tgz"
   },
   "devDependencies": {
