--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "plugins": [
       {
         "name": "next"
+      },
+      {
+        "name": "ts-plugin-sort-import-suggestions"
       }
     ],
     "paths": {
