--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
+    "next-themes": "^0.2.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.28",
     "jotai": "^2.7.1",
