--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@nextui-org/react": "^2.2.10",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.28",
+    "immer": "^10.1.1",
     "jotai": "^2.7.1",
     "jotai-devtools": "^0.9.1",
+    "jotai-immer": "^0.3.0",
     "jotai-optics": "^0.3.2",
     "next": "14.1.4",
     "next-themes": "^0.2.1",
